<resources>
    <string name="app_name">WeTrip</string>
    <string name="notif_reminder">Remind before a trip</string>
    <string name="logout">logout</string>

    <string name="open_gps">Open Gps Service Location</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="Unlimited">Unlimited</string>
    <string name="km">Km</string>
    <string name="select_date">Select Date</string>
    <string name="where_to_go">Where are we going?</string>
    <string name="past_trip_set">Can\'t Set A trip to the Past!</string>
    <string name="contain_att">Must Contain Attraction</string>
    <string name="all_fields">must contain all fields</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="welcome">Welcome</string>
    <string name="registered">registered successfully</string>
    <string name="login_success">Login success</string>
    <string name="leave_we_trip">Leave WeTrip?</string>
    <string name="profile_image">Profile Image</string>
    <string name="login">Login</string>
    <string name="not_sign_up">Not Sign up already?</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="what_day">What day?</string>
    <string name="what_time">What time?</string>
    <string name="where_we_meet">Where will we meet?</string>
    <string name="more_info">More info...</string>
    <string name="somewhere">Somewhere</string>
    <string name="give_trip_name">Give your trip a name!</string>
    <string name="new_trip">New Trip</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="fullname">Full Name</string>
    <string name="search_by_distance">Search by Distance</string>
    <string name="distance">Distance:</string>
    <string name="zero_km">0 Km</string>
    <string name="search">Search</string>
    <string name="full">Full</string>
    <string name="delete">Delete</string>
    <string name="Join">join</string>
    <string name="leave">Leave</string>
    <string name="chat">Chat</string>
    <string name="msg_empty">message is empty</string>
    <string name="need_login">You need to be logged in to do that...</string>
    <string name="keep">Keep</string>
    <string name="delete_trip">Delete the trip?</string>
    <string name="leave_trip">Leave the trip?</string>
    <string name="cant_join_trip_past">Can\'t join to a trip in the Past!</string>
    <string name="my_friends">My Friends</string>
    <string name="new_msg_from">New message from</string>
    <string name="my_trips">My Trips</string>
    <string name="add_friend">Friend Added!</string>
    <string name="must_be_friend">Must Be A Friend First!</string>
    <string name="select_pic">Select Picture</string>
    <string name="choose_files">Choose from files</string>
    <string name="take_photo">Take a photo</string>
    <string name="my_files">My Files</string>
    <string name="no_premission">No permission to edit photo</string>
    <string name="image_upload">Image upload successful!</string>
    <string name="no_file_select">No file selected</string>
    <string name="my_profile">My Profile</string>
    <string name="register">Register</string>
    <string name="feed">Feed</string>

</resources>
