<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:cardElevation="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#1B271C"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="5"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/login_dialog_username_et"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:id="@+id/login_dialog_password_et"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:background="@drawable/btn_round_light"
        android:id="@+id/login_dialog_submit_btn"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/not_sign_up"
            android:textColor="#000"
            android:gravity="center"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:padding="10dp"
            android:focusable="false"
            android:textColor="@color/colorPrimary"
            android:id="@+id/register_login_dialog"
            />

    </LinearLayout>


</LinearLayout>

</androidx.cardview.widget.CardView>

