<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    app:cardCornerRadius="15dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="#fff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Register"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"

        android:textColor="#1B271C"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="5"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="center"

            android:inputType="textEmailAddress"
            android:id="@+id/register_dialog_username_et"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:gravity="center"

            android:inputType="text"
            android:id="@+id/register_dialog_fullname_et"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"

                android:inputType="textPassword"
                android:id="@+id/register_dialog_password_et"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:gravity="center"

            android:inputType="text"
            android:id="@+id/register_dialog_country_et"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/first"
        android:layout_marginTop="10dp"
        android:id="@+id/register_dialog_radio"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/register_dialog_male"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/register_dialog_female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/register_dialog_other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/other"/>
    </RadioGroup>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_dialog_age"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:textSize="23sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/age" />

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:theme="@style/NumberPickerText"
                android:layout_alignParentRight="true"
                android:id="@+id/register_dialog_number_picker"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginVertical="10dp"
        android:background="@drawable/btn_round_light"
        android:textColor="#fff"
        android:id="@+id/register_dialog_submit_btn"

        />

</LinearLayout>

</androidx.cardview.widget.CardView>

