<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="false"
    app:cardElevation="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/new_trip"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#1B271C"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="-6"
        android:shadowDy="-6"
        android:shadowRadius="5"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/give_trip_name"
            android:gravity="center"

            android:inputType="textEmailAddress"
            android:id="@+id/new_trip_dialog_title"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="New Trip"-->
        <!--android:gravity="center"-->
        <!--android:textSize="35sp"/>-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="visible"

        app:cardUseCompatPadding="true"
        app:contentPadding="6dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:visibility="visible"
            app:cardUseCompatPadding="true"
            app:contentPadding="6dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/new_trip_dialog_image"
                    android:src="@drawable/ic_landscape_gray_60dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/somewhere"
                    android:id="@+id/att_name_tv"
                    android:gravity="center"
                    android:textSize="20sp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/date_new_trip_dialog"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"

                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_day"
                    android:gravity="center"
                    android:focusable="false"
                    android:id="@+id/new_trip_dialog_date_et"
                    android:inputType="textEmailAddress"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_round"
                android:src="@drawable/ic_event_note_black_24dp"
                android:scaleType="fitCenter"
                android:clickable="false"
                android:focusable="false"
                android:padding="10dp"
                android:id="@+id/new_trip_dialog_date_btn"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/time_new_trip_dialog"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"

                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_time"
                    android:gravity="center"
                    android:focusable="false"
                    android:id="@+id/new_trip_dialog_time_et"
                    android:inputType="textEmailAddress"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_access_time_black_24dp"
                android:id="@+id/new_trip_dialog_time_btn"
                />

        </LinearLayout>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--&gt;-->
        <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--/>-->

        <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--/>-->

        <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        >










<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        >-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Time"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:id="@+id/new_trip_dialog_time"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/where_we_meet"
            android:gravity="center"

            android:inputType="textEmailAddress"
            android:id="@+id/new_trip_dialog_point"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/more_info"
            android:gravity="center"

            android:inputType="textEmailAddress"
            android:id="@+id/new_trip_dialog_details"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/btn_round"
        android:id="@+id/login_dialog_submit_btn"
        android:layout_margin="20dp"
        android:textColor="#fff"
        />


    </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>

